# pyproject_template

./: .pre-commit-config.yaml  README.md  pyproject.toml
tests/: sample_test.py
