[tool.poetry]
name = "pyproject-template"
version = "0.1.0"
description = ""
authors = ["Paweł Wiszniewski <pawel.wiszniewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.3.0"
pytest = "^8.1.1"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
coverage = {extras = ["toml"], version = "^7.4.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py312']

[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = true
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"

[tool.coverage.run]
branch = true
source = ["src"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.flake8]
max-line-length = 120
